feat: add Maven, Design Patterns, REST API, Functional Programming, JVM, Serialization, Servlets/Filters, Git, Docker, SQL, Microservices, Actuator and OpenAPI content